discussion/kv_engine/181671/181671_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Filter out events in the front end thread

Change-Id: I447e30e2b66cb9e383c5a03e3ea292e6c5aeee3a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-21 14:02:41.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-21 14:05:34.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50606/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50606/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31835/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31835/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11114/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11114/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23414/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23414/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23817/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23817/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22833/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/22833/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11210/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11210/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24652/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24652/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21387/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:256:20: error: no matching member function for call to "push" [clang-diagnostic-error]
    filleventqueue.push(std::move(new_event));
                   ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_queue.h:265:7: note: candidate function not viable: no known conversion from "unique_ptr<ConfigureEvent, default_delete<ConfigureEvent>>" to "const unique_ptr<Event, default_delete<Event>>" for 1st argument
      push(const value_type& __x)
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/stl_queue.h:270:7: note: candidate function not viable: no known conversion from "unique_ptr<ConfigureEvent, default_delete<ConfigureEvent>>" to "unique_ptr<Event, default_delete<Event>>" for 1st argument
      push(value_type&& __x)
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/event.cc:21:16: error: "config" is a protected member of "AuditImpl" [clang-diagnostic-error]
    if (!audit.config.is_auditd_enabled()) {
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.h:98:17: note: declared protected here
    AuditConfig config;
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/event.cc:33:16: error: "auditfile" is a protected member of "AuditImpl" [clang-diagnostic-error]
    if (!audit.auditfile.ensure_open()) {
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.h:101:15: note: declared protected here
    AuditFile auditfile;
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/event.cc:39:15: error: "auditfile" is a protected member of "AuditImpl" [clang-diagnostic-error]
    if (audit.auditfile.write_event_to_disk(payload)) {
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.h:101:15: note: declared protected here
    AuditFile auditfile;
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/event.cc:49:11: error: "auditfile" is a protected member of "AuditImpl" [clang-diagnostic-error]
    audit.auditfile.ensure_open();
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.h:101:15: note: declared protected here
    AuditFile auditfile;
              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/event.h:22:20: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    nlohmann::json payload;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/event.h:28:51: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer, std::vector<unsigned char, std::allocator<unsigned char> > >" [clang-diagnostic-error]
    Event(const uint32_t event_id, nlohmann::json payload)
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:38:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/include/memcached/audit_interface.h:80:46: error: use of undeclared identifier "nlohmann" [clang-diagnostic-error]
    virtual bool put_event(uint32_t eventid, nlohmann::json payload) = 0;
                                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21387/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:256:20:
error: no matching member function for call to "push" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21387/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20645/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
